After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 736812 - Entry completion shows up at the top-left
Entry completion shows up at the top-left
Status: RESOLVED FIXED
Product: mutter
Classification: Core
Component: wayland
3.13.x
Other Linux
: Normal normal
: ---
Assigned To: mutter-maint
mutter-maint
Depends on:
Blocks:
 
 
Reported: 2014-09-17 15:19 UTC by Bastien Nocera
Modified: 2014-09-17 19:53 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
screenshot (49.92 KB, image/png)
2014-09-17 15:19 UTC, Bastien Nocera
  Details
wayland: Fix the placement of popup windows (2.32 KB, patch)
2014-09-17 15:43 UTC, Bastien Nocera
committed Details | Review

Description Bastien Nocera 2014-09-17 15:19:48 UTC
Created attachment 286396 [details]
screenshot

GTK+ master, mutter master

mutter --wayland &
GDK_BACKEND=wayland gtk3-widget-factory

The drop-down from the combo box is at the top left instead of underneath the entry.
Comment 1 Matthias Clasen 2014-09-17 15:32:09 UTC
hmm, that works here. I get the popup mostly in the right place (module shadow/invisible border offset)
Comment 2 Bastien Nocera 2014-09-17 15:43:37 UTC
Created attachment 286398 [details] [review]
wayland: Fix the placement of popup windows

The fix in d61dde1 regressed the position of popup windows, since the
size was 0x0 when we wanted to do a sole move. Only fizzle out in the
path where we actually *do* resize.
Comment 3 Bastien Nocera 2014-09-17 19:52:47 UTC
Attachment 286398 [details] pushed as 4a41d41 - wayland: Fix the placement of popup windows