src/wayland/window-wayland.c
@@ -188,21 +188,20 @@ meta_window_wayland_move_resize_internal (MetaWindow                *window,
     }
   else
     {
-      /* If we get a 0x0 size, this means that we're trying to resize
-       * a surface that doesn't have any buffer attached. This can happen
-       * when a client requests an xdg surface before bringing it up.
-       * The constrained_rect will be 1x1 because of how our constraints
-       * code works, and sending that to the window would cause it to
-       * redraw itself, so just don't send anything. Pretend like this
-       * move_resize never happened.
-       */
-      if (unconstrained_rect.width == 0 &&
-          unconstrained_rect.height == 0)
-        return;
-
       if (constrained_rect.width != window->rect.width ||
           constrained_rect.height != window->rect.height)
         {
+          /* If we get a 0x0 size, this means that we're trying to resize
+           * a surface that doesn't have any buffer attached. This can happen
+           * when a client requests an xdg surface before bringing it up.
+           * The constrained_rect will be 1x1 because of how our constraints
+           * code works, and sending that to the window would cause it to
+           * redraw itself, so just don't send anything.
+           */
+          if (unconstrained_rect.width == 0 &&
+              unconstrained_rect.height == 0)
+            return;
+
           meta_wayland_surface_configure_notify (window->surface,
                                                  constrained_rect.width,
                                                  constrained_rect.height,
